fix response layout for mobile; button was shifting to left

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -93,7 +93,7 @@
 	--lightGrey: rgb(190, 190, 190);
 	--textColor: #333;
 	--blackBG: #EFF2EF;
-	--sky: rgba(246, 250, 252, 0.747);
+	--sky: rgb(246, 250, 252);
 	--gold: #D4AF37;
 	--wheat: #fffcf1;
 	/* "CMU",  */
@@ -296,33 +296,17 @@
 	}
 /* Nav Button */
 	div.nav {
-		margin: 0 0.4rem;
-		padding: 0.4rem;
+		position: sticky;
+		display: block;
+		margin: 0;
+		padding: 1vh 0.4vh;
 		padding-bottom: 0;
 		position: -webkit-sticky;
 		top: 0;
-		position: sticky;
-		display: flex;
-		flex-direction: row;
-		justify-content: end;
 		z-index: 1;
 	}
-	div.nav a {
-		padding: 0.3em;
-		text-decoration: none;
-		font-size: 0.75rem;
-		border-radius: 0.25rem;
-		background: var(--page);
-		box-shadow: 0.063rem 0.063rem 0.188rem #929292, -0.063rem -0.063rem 0.188rem #e4e4e4;
-		text-decoration: none;
-		color: var(--textColor);
-		transition: color 1s;
-		display: inline-block;
-	}
-	div.nav a:hover {
-		background: var(--page);
-		box-shadow: inset 0.063rem 0.063rem 0.125rem #a6a6a6, inset -0.063rem -0.063rem 0.125rem #ffffff;
-		color: rgb(76, 170, 86)
+	div.nav button {
+		float: right;
 	}
 /* Scrollbar */
 		nav::-webkit-scrollbar {
@@ -487,6 +471,7 @@
 	}
 	h1 {
 		font-size: 2em;
+		margin-bottom: 1.2em;
 		text-align: center;
 		color: var(--textColor);
 	}
@@ -2325,7 +2310,6 @@
 		}
 		nav.tocShow {
 			display: block;
-			backdrop-filter: blur(5px);
 			width: 100%;
 			position: fixed;
 			z-index: 1;
