--- a/numerm/static/numerm/styles.css
+++ b/numerm/static/numerm/styles.css
@@ -78,7 +78,7 @@
 	/*? colors */
 		--page: #ffffff;
 		--linkBlue: #0668d8;
-		--wheat: #fffcf1cb;
+		--wheat: #fffcf1;
 		--darkRed: #c42c1f; 
 		--scarlet: #a8201a;
 		--lightRed: #ff949f; 
@@ -204,39 +204,19 @@
 	}
 /** Table of contents button **/
 	div.nav {
-		margin: 0 0.4rem;
-		padding: 0.4rem;
+		position: sticky;
+		display: block;
+		margin: 0;
+		padding: 1vh 0.4vh;
 		padding-bottom: 0;
 		position: -webkit-sticky;
 		top: 0;
-		position: sticky;
-		display: flex;
-		flex-direction: row;
-		justify-content: end;
 		z-index: 1;
 	}
-	div.nav p {
-		padding: 0;
-		margin: 1% 0;
-		font-size: 0.75rem;
-		text-align: center;
+	div.nav button {
+		float: right;
 	}
-	div.nav a {
-		padding: 0.3em;
-		text-decoration: none;
-		border-radius: 0.25rem;
-		background: var(--page);
-		box-shadow: 0.063rem 0.063rem 0.188rem #929292, -0.063rem -0.063rem 0.188rem #e4e4e4;
-		text-decoration: none;
-		color: var(--textColor);
-		transition: color 1s;
-		display: inline-block;
-	}
-	div.nav a:hover {
-		background: var(--page);
-		box-shadow: inset 0.063rem 0.063rem 0.125rem #a6a6a6, inset -0.063rem -0.063rem 0.125rem #ffffff;
-		color: rgb(76, 170, 86)
-	}
+
 	/* TOC */
 		div.toc {
 			background: #f9f9f9 none repeat scroll 0 0;
@@ -410,6 +390,7 @@
 	}
 	h1 {
 		font-size: 2em;
+		margin-bottom: 1.2em;
 		text-align: center;
 		color: var(--textColor);
 	}
@@ -666,7 +647,6 @@
 		padding: 0;
 	}
 /*? Links */
-	a { white-space: pre; }
 	section a {
 		position: relative;
 		padding:0;
@@ -1159,7 +1139,6 @@
 		}
 		nav.tocShow {
 			display: block;
-			backdrop-filter: blur(5px);
 			width: 100%;
 			position: fixed;
 			z-index: 1;
